# things-cli

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  SKILL.md  gemini-extension.json  install.sh  package.json  pyproject.toml  requirements.txt  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.opencode/: INSTALL.md
.opencode/plugins/: things.js
scripts/: bump.sh  uninstall.sh
skills/things/: SKILL.md
src/things_cli/: cli.py
