[project]
name = "things-cli"
version = "1.3.0"
description = "CLI for Things 3 — read/write tasks (inbox/today/projects, search, add/complete/update), JSON output, built for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "things.py>=0.0.16",
]

[project.scripts]
things = "things_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/things_cli"]
